--- a/TimberbornToolShortcuts.csproj
+++ b/TimberbornToolShortcuts.csproj
@@ -7,6 +7,7 @@
     <Version>0.3.3</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>9.0</LangVersion>
+    <RootNamespace>ToolShortcuts</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
