Make dependency grabbing more robust
In some funny cases, it was possible for the dependency to not be resolved. Weird.

Replaced a bunch of grabbed dependencies with direct access (better).
The two remaining will now result in a warning instead of an error, so that the game does not crash.

--- a/TimberbornToolShortcuts.csproj
+++ b/TimberbornToolShortcuts.csproj
@@ -30,13 +30,13 @@
     <Reference Include="Timberborn.GameScene" Publicize="true">
       <HintPath>Timberborn\Timberborn.GameScene.dll</HintPath>
     </Reference>
-    <Reference Include="Timberborn.InputSystem">
+    <Reference Include="Timberborn.InputSystem" Publicize="true">
       <HintPath>Timberborn/Timberborn.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.KeyBindingSystem" Publicize="true">
       <HintPath>Timberborn\Timberborn.KeyBindingSystem.dll</HintPath>
     </Reference>
-    <Reference Include="Timberborn.KeyBindingSystemUI">
+    <Reference Include="Timberborn.KeyBindingSystemUI" Publicize="true">
       <HintPath>Timberborn\Timberborn.KeyBindingSystemUI.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.MainMenuScene" Publicize="true">
