--- a/TimberbornToolShortcuts.csproj
+++ b/TimberbornToolShortcuts.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Timberborn.ToolShortcuts</AssemblyName>
-    <Description>Tool shortcurs for Timberborn</Description>
-    <Version>0.4.1</Version>
+    <Description>Tool Shortcuts for Timberborn</Description>
+    <Version>2.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>9.0</LangVersion>
     <RootNamespace>ToolShortcuts</RootNamespace>
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Reference Include="Bindito.Core">
-      <HintPath>Timberborn/Bindito.Core.dll</HintPath>
+      <HintPath>Timberborn\Bindito.Core.dll</HintPath>
     </Reference>
     <Reference Include="Bindito.Unity">
       <HintPath>Timberborn\Bindito.Unity.dll</HintPath>
@@ -31,7 +31,7 @@
       <HintPath>Timberborn\Timberborn.GameScene.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.InputSystem" Publicize="true">
-      <HintPath>Timberborn/Timberborn.InputSystem.dll</HintPath>
+      <HintPath>Timberborn\Timberborn.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.KeyBindingSystem" Publicize="true">
       <HintPath>Timberborn\Timberborn.KeyBindingSystem.dll</HintPath>
@@ -52,25 +52,25 @@
       <HintPath>Timberborn\Timberborn.SettingsSystemUI.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.SingletonSystem" Publicize="true">
-      <HintPath>Timberborn/Timberborn.SingletonSystem.dll</HintPath>
+      <HintPath>Timberborn\Timberborn.SingletonSystem.dll</HintPath>
     </Reference>
     <Reference Include="Timberborn.ToolSystem" Publicize="true">
-      <HintPath>Timberborn/Timberborn.ToolSystem.dll</HintPath>
+      <HintPath>Timberborn\Timberborn.ToolSystem.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>Timberborn/UnityEngine.dll</HintPath>
+      <HintPath>Timberborn\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InputSystem">
-      <HintPath>Timberborn/Unity.InputSystem.dll</HintPath>
+      <HintPath>Timberborn\Unity.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>Timberborn/UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>Timberborn\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>Timberborn\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UIElementsModule">
-      <HintPath>Timberborn/UnityEngine.UIElementsModule.dll</HintPath>
+      <HintPath>Timberborn\UnityEngine.UIElementsModule.dll</HintPath>
     </Reference>
   </ItemGroup>
 
